improved introduction and chapter 1 and 2

--- a/scritturaTesi/bibliografia.bib
+++ b/scritturaTesi/bibliografia.bib
@@ -37,6 +37,25 @@ year = {2018}
   number={1},
   pages={21-28},
   doi={10.1109/TIT.1962.1057683}}
+  
+@book{Gallager_1972,
+	doi = {10.1007/978-3-7091-2945-6},
+	url = {https://doi.org/10.1007%2F978-3-7091-2945-6},
+	year = 1972,
+	publisher = {Springer Vienna},
+	author = {Robert Gallager},
+	title = {Information Theory and Reliable Communication}
+}
+
+@book{richardson2008modern,
+  title={Modern Coding Theory},
+  author={Richardson, T. and Urbanke, R.},
+  isbn={9781139469647},
+  url={https://books.google.it/books?id=ZJrZPObOe60C},
+  year={2008},
+  publisher={Cambridge University Press}
+}
+
 
   @article{gumucs2021novel,
   title={A novel error correction protocol for continuous variable quantum key distribution},
@@ -167,4 +186,13 @@ DOI = {10.3390/e24101463}
 	annote = {Da leggere il paragrafo che parla del protocollo BB84 per scrivere l’introduzione
 },
 	file = {Zhao - 2018 - Development of Quantum Key Distribution and Attack.pdf:/home/skesky/Zotero/storage/YZCT7TTX/Zhao - 2018 - Development of Quantum Key Distribution and Attack.pdf:application/pdf},
+}
+
+
+@article{borwankar_low_nodate,
+	title = {Low {Density} {Parity} {Check} {Code} ({LDPC} {Codes}) {Overview}},
+	language = {en},
+	author = {Borwankar, Saumya and Shah, Dhruv},
+	keywords = {LDPC},
+	file = {Borwankar and Shah - Low Density Parity Check Code (LDPC Codes) Overvie.pdf:/home/skesky/Zotero/storage/4JZVKHMV/Borwankar and Shah - Low Density Parity Check Code (LDPC Codes) Overvie.pdf:application/pdf},
 }
