--- a/scritturaTesi/esempioTesi.tex
+++ b/scritturaTesi/esempioTesi.tex
@@ -20,10 +20,14 @@
 \usepackage[all]{hypcap} % per far si che i link ipertestuali alle immagini puntino all'inizio delle stesse e non alla didascalia sottostante
 \usepackage{amsthm}	% per definizioni e teoremi
 \usepackage{amsmath}	% per ``cases'' environment
+\usepackage{bbm}
 
 
-\usepackage{algorithm}		%pacchetti utilizzati per la scrittura di pseudo-codice
+\usepackage{algorithm}	%pacchetti utilizzati per la scrittura di pseudo-codice
 \usepackage{algorithmic}
+
+\usepackage{caption}	%pacchetto per aggiungere le caption alle minipage
+\DeclareCaptionType[within=section]{mat}
 
 % --- FINE riachiamo di pacchetti di utilità
 
